<resources>
    <string name="app_name">Taji Driver</string>
    <string name="welcome_taji">Welcome to Taji Driver</string>
    <string name="hello">Hello</string>
    <string name="sign_in_text">Sign in with your Taji Driver account</string>
    <string name="email_placeholder">E-mail</string>
    <string name="email_hint">E-mail Address</string>
    <string name="password_placeholder">Password</string>
    <string name="password_hint">********</string>
    <string name="accountSignUp">Create a New Taji Driver Account</string>
    <string name="sign_up_text">Sign up to get your Taji Driver account</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="fname_placeholder">First Name</string>
    <string name="lname_placeholder">Last Name</string>
    <string name="phone_number_placeholder">Phone Number</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="sign_up">Create</string>
    <string name="create_account">Create Account</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Authenticating</string>
    <string name="in_use">This e-mail address is already in use</string>

    // Sign In Activity
    <string name="email">E-mail Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="about_taji">About Taji Cabs</string>
    <string name="auth_failed">Account Authentication Failed.</string>

    // Sign Up Activity
    <string name="taji_registration">Create Taji Cabs Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="accountSignIn">Back to Sign In</string>
    <string name="id_number">ID Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reg_failed">Account created failed. Try again later</string>
    <string name="err_500">Something went wrong. Try again later</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_maps">Taji Cabs</string>

    // Home Activity
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found. Location services don\'t have permissions.</string>
    <string name="pick_place">Choose a place</string>
    <string name="follow">Follow</string>
    <string name="title_activity_passenger_home">Passenger Home</string>
    <string name="pick_up">Enter Pick Up Point</string>
    <string name="destination">Enter Destination</string>
    <string name="book_ride">Book your ride</string>
    <string name="origin">From:</string>
    <string name="dest">To:</string>
    <string name="request_ride">Request Ride</string>
    <string name="taji_driver">Taji Driver</string>

    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="nothing">You Have No Active Request At The Moment</string>
    <string name="request_text_notification">Ride Request</string>
    <string name="distance_text">Distance</string>
    <string name="decline_request">Decline</string>
    <string name="accept_request">Accept</string>
    <string name="placeholder_from">From: Githurai Kimbo</string>
    <string name="trip_progress">Trip Details</string>
    <string name="end_trip">End Trip</string>
    <string name="start_trip">Start Trip</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="vehicle_make_placeholder">Vehicle Make</string>
    <string name="vehicle_reg_placeholder">Vehicle License</string>
    <string name="end_trip_pop_up_text">Your trip request is completed. Here\'s the total amount owed for the trip</string>
    <string name="ksh">KSh</string>
    <string name="_0000">0000</string>
    <string name="welcome_long_text">Let us be the first to welcome you to the Taji Driver family. You\'ve taken the first step in becoming a sophisticated driver. \n\nLet\'s setup your taxi before we get you a trip request</string>
    <string name="to_dashboard">To Dashboard</string>
    <string name="my_profile">My Profile</string>
    <string name="my_trips">My Trips</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="personal_information">Personal Information</string>
    <string name="vehicle_management">Vehicle Management</string>
    <string name="vehicle_make">Vehicle Make</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="no_vehicles_found">No Vehicles Found</string>
    <string name="set_up_your_taxi">Set up your Taxi</string>
    <string name="skip_setup">Skip Taxi Setup</string>
    <string name="add_taxi">Add Taxi</string>
    <string name="vehicle_brand">Vehicle Brand</string>
    <string name="vehicle_model">Model</string>
    <string name="year_of_manuf">Year</string>
    <string name="license_plate">License Plate</string>
    <string name="vehicle_color">Color</string>
    <string name="seating_capacity">Seating Capacity</string>
    <string name="successful_setup">We\'ve set up your Taji Taxi successfully, now let\'s get you a trip request</string>
    <string name="taxi_setup_complete">Taxi Setup Complete</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="taxi_management">Taxi Management</string>
    <string name="terms_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="account_setup_complete">Account Setup complete</string>
    <string name="welcome_back_to_taji_driver">Welcome Back to Taji Driver</string>
    <string name="forgot_password_text">Forgot Your email/password? Just input your email and you\\\'ll be one click away from resetting your password</string>
    <string name="reset_account">RESET ACCOUNT</string>
    <string name="recovery_success">Recovery Mail Successfully Sent</string>

</resources>
